crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__mixed_docs_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "# ## not docs!\n## docs, but with a problem\n## (namely that this is a mix of docs and regular comments)\n# not docs\nx = 5\n\n42\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign Ident=>LowerIdent@0 InlineAssign=>OpAssign@1 Num=>Int@2 EndAssign)
        HintExpr
        Num=>Int@3
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("x"), IntBase10("5"))
IntBase10("42")

[=== formatted below ===]

