crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__multi_char_string_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "\"foo\"\n\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr String=>String@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
String("\"foo\"")

[=== formatted below ===]

