crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__multiline_string_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "a = \"Hello,\\n\\nWorld!\"\nb =\n    \"\"\"\n    Hello,\\n\\nWorld!\n    \"\"\"\nc =\n    \"\"\"\n    Hello,\n\n    World!\n    \"\"\"\n42\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            String=>String@2
        EndAssign)
        (BeginAssign
            Ident=>LowerIdent@3
            InlineAssign=>OpAssign@4
            (BeginBlock HintExpr String=>String@5 EndBlock)
        EndAssign)
        (BeginAssign
            Ident=>LowerIdent@6
            InlineAssign=>OpAssign@7
            (BeginBlock HintExpr String=>String@8 EndBlock)
        EndAssign)
        HintExpr
        Num=>IntBase10@9
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign("a", String("\"Hello,\\n\\nWorld!\""))
Assign("b", Block([String("\"\"\"\n    Hello,\\n\\nWorld!\n    \"\"\"")]))
Assign("c", Block([String("\"\"\"\n    Hello,\n\n    World!\n    \"\"\"")]))
IntBase10("42")

[=== formatted below ===]

