crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__multiline_string_in_apply_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "e\"\"\"\"\\\"\"\"\"\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Ident=>LowerIdent@0
            InlineApply=>LowerIdent@0
            String=>String@1
        EndApply)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Apply(Ident("e"), [String("\"\"\"\"\\\"\"\"\"")])

[=== formatted below ===]

